feat: apply plugin packages transactionally